# mana-habilidade-data-lake-pg

./: README.md  manifest.yaml  pyproject.toml
src/mana_habilidade_data_lake_pg/: __init__.py  core.py
tests/: test_core.py
